# near-rent

./: Cargo.toml  README.md
scripts/: dev-deploy.sh  rent.sh  rent_add.sh  rent_claim.sh  rent_pay.sh  rent_remove.sh  rent_update.sh  rented_tokens_for_account.sh  rents_for_account.sh  rents_for_contract.sh  rents_supply_by_contract.sh  test.sh
scripts/neardev/: dev-account  dev-account.env
src/: ft_callbacks.rs  lib.rs  nft_callbacks.rs
