[package]
name = "nft_rent"
version = "0.1.0"
authors = ["Muzikanto <schiriy_maxim@icloud.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1"
serde_json = "1.0"
near-sdk = { version = "4.1.0-pre.3", features = ["abi"] }
mfight_sdk = { path = "../-sdk", version = "=0.1.0" }
schemars = "0.8"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
